--- a/index.html
+++ b/index.html
@@ -47,14 +47,14 @@
                             <a href="#contact" class="btn">Hire me</a>
                         </div>
                         <div class="home-img padd-15">
-                            <img src="images/myphoto.jpg" alt="">
+                            <img src="image/myphoto.jpg" alt="">
                         </div>
                     </div>
                 </div>
             </section>
             <!-- Home Section End -->
             <!-- About Section Start -->
-            <section class="about section">
+            <section class="about section hidden">
                 <div class="container">
                     <div class="row">
                         <div class="section-title padd-15">
@@ -72,14 +72,193 @@
                                 </div>
                             </div>
                             <div class="row">
-                                <div class="personal-info">info</div>
-                                <div class="skills">Skill</div>
+                                <div class="personal-info padd-15">
+                                    <div class="row">
+                                        <div class="info-item padd-15">
+                                            <p>Age : <span>24</span></p>
+                                        </div>
+                                        <div class="info-item padd-15">
+                                            <p>Degree : <span>Computer Science</span></p>
+                                        </div>
+                                        <div class="info-item padd-15">
+                                            <p>City : <span>Cairo</span></p>
+                                        </div>
+                                        <div class="info-item padd-15">
+                                            <p>Email : <span>dhoom.sedge@gmail.com</span></p>
+                                        </div>
+                                        <div class="info-item padd-15">
+                                            <p>Freelance : <span>Available</span></p>
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="buttons padd-15">
+                                            <a href="$" class="btn">Download CV</a>
+                                            <a href="$" class="btn">Hire me</a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="skills padd-15">
+                                    <div class="row">
+                                        <div class="skill-item padd-15">
+                                            <h5>DART</h5>
+                                            <div class="progress">
+                                                <div class="progress-in" style="width: 95%;"></div>
+                                                <div class="skill-percentage">95%</div>
+                                            </div>
+                                        </div>
+                                        <div class="skill-item padd-15">
+                                            <h5>HTML</h5>
+                                            <div class="progress">
+                                                <div class="progress-in" style="width: 90%;"></div>
+                                                <div class="skill-percentage">90%</div>
+                                            </div>
+                                        </div>
+                                        <div class="skill-item padd-15">
+                                            <h5>CSS</h5>
+                                            <div class="progress">
+                                                <div class="progress-in" style="width: 85%;"></div>
+                                                <div class="skill-percentage">85%</div>
+                                            </div>
+                                        </div>
+                                        <div class="skill-item padd-15">
+                                            <h5>JS</h5>
+                                            <div class="progress">
+                                                <div class="progress-in" style="width: 80%;"></div>
+                                                <div class="skill-percentage">80%</div>
+                                            </div>
+                                        </div>
+                                        <div class="skill-item padd-15">
+                                            <h5>PHP</h5>
+                                            <div class="progress">
+                                                <div class="progress-in" style="width: 85%;"></div>
+                                                <div class="skill-percentage">85%</div>
+                                            </div>
+                                        </div>
+                                        <div class="skill-item padd-15">
+                                            <h5>SQL</h5>
+                                            <div class="progress">
+                                                <div class="progress-in" style="width: 85%;"></div>
+                                                <div class="skill-percentage">85%</div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="education padd-15">
+                                    <h3 class="title">Education</h3>
+                                    <div class="row">
+                                        <div class="timeline-box padd-15">
+                                            <div class="timeline shadow-dark">
+                                                <!-- timeline item -->
+                                                <div class="timeline-item">
+                                                    <div class="circle-dot"></div>
+                                                    <h3 class="timeline-date">
+                                                        <i class="fa fa-calendar"></i> 2017 - 2020
+                                                    </h3>
+                                                    <h4 class="timeline-title">Bacholar in computer science</h4>
+                                                    <p class="timeline-text">Lorem ipsum dolor sit amet consectetur
+                                                        adipisicing elit. Aspernatur aliquam nemo necessitatibus in ut
+                                                        ipsa est a ab quaerat, sit, praesentium numquam officia fugiat
+                                                        ad! Eius necessitatibus quibusdam asperiores inventore?</p>
+                                                </div>
+                                                <div class="timeline-item">
+                                                    <div class="circle-dot"></div>
+                                                    <h3 class="timeline-date">
+                                                        <i class="fa fa-calendar"></i> 2017 - 2020
+                                                    </h3>
+                                                    <h4 class="timeline-title">Bacholar in computer science</h4>
+                                                    <p class="timeline-text">Lorem ipsum, dolor sit amet consectetur
+                                                        adipisicing elit. Officiis esse magnam amet cupiditate similique
+                                                        reprehenderit nulla dolorum eaque assumenda! Dolore rem minus
+                                                        non dignissimos dolorem vel, saepe deleniti ab voluptas?</p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="experience padd-15">
+                                    <h3 class="title">Experience</h3>
+                                    <div class="row">
+                                        <div class="timeline-box padd-15">
+                                            <div class="timeline shadow-dark">
+                                                <!-- Timeline Item Start -->
+                                                <div class="timeline-item">
+                                                    <div class="circle-dot"></div>
+                                                    <h3 class="timeline-date">
+                                                        <i class="fa fa-calendar"></i> 2017 - 2020
+                                                    </h3>
+                                                    <h4 class="timeline-title">Bacholar in computer science</h4>
+                                                    <p class="timeline-text">Lorem ipsum dolor sit amet consectetur
+                                                        adipisicing elit. Ipsum culpa corrupti odio atque sint excepturi
+                                                        asperiores aspernatur at nulla hic recusandae natus, debitis
+                                                        doloremque repellat cumque esse. Porro, similique rem!</p>
+                                                </div>
+                                                <!-- Timeline Item End-->
+                                                <!-- Timeline Item Start -->
+                                                <div class="timeline-item">
+                                                    <div class="circle-dot"></div>
+                                                    <h3 class="timeline-date">
+                                                        <i class="fa fa-calendar"></i> 2017 - 2020
+                                                    </h3>
+                                                    <h4 class="timeline-title">Bacholar in computer science</h4>
+                                                    <p class="timeline-text">Lorem ipsum dolor sit amet consectetur
+                                                        adipisicing elit. Ipsum culpa corrupti odio atque sint excepturi
+                                                        asperiores aspernatur at nulla hic recusandae natus, debitis
+                                                        doloremque repellat cumque esse. Porro, similique rem!</p>
+                                                </div>
+                                                <!-- Timeline Item End-->
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </section>
             <!-- About Section End -->
+            <!-- Services Section Start -->
+            <section class="service section">
+                <div class="container">
+                    <div class="row">
+                        <div class="section-title padd-15">
+                            <h2>Services</h2>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <!-- Service Item Start -->
+                        <div class="service-item">
+                            <div class="service-item-inner">
+                                <div class="icon">
+                                    <i class="fa fa-mobile-alt"></i>
+                                </div>
+                                <h4>Android App Development</h4>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident voluptas fugiat
+                                    mollitia dignissimos aut exercitationem cupiditate doloremque inventore? Alias autem
+                                    dicta magnam provident, consequuntur dolorem assumenda repellat voluptate eos ab.
+                                </p>
+                            </div>
+                        </div>
+                        <!-- Service Item End -->
+                         <!-- Service Item Start -->
+                         <div class="service-item">
+                            <div class="service-item-inner">
+                                <div class="icon">
+                                    <i class="fa fa-mobile-alt"></i>
+                                </div>
+                                <h4>IOS App Development</h4>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident voluptas fugiat
+                                    mollitia dignissimos aut exercitationem cupiditate doloremque inventore? Alias autem
+                                    dicta magnam provident, consequuntur dolorem assumenda repellat voluptate eos ab.
+                                </p>
+                            </div>
+                        </div>
+                        <!-- Service Item End -->
+                    </div>
+                </div>
+            </section>
+            <!-- Services Section Start -->
         </div>
         <!-- Main Conten End -->
     </div>
