--- a/index.html
+++ b/index.html
@@ -39,12 +39,16 @@
             <section id="home" class="home section">
                 <div class="container">
                     <div class="row">
+                    <div class="btn-lang">
+                        <a onclick="changeLang(lang)" class="btn">ENGLISH</a>
+                        <a id="ar" onclick="changeLang(lang)" class="btn">عربي</a>
+                    </div>
                         <div class="home-img padd-15">
                             <img src="image/myphoto.jpg" alt="">
                         </div>
                         <div class="home-info padd-15">
                             <h3 class="hello">Hello <span class="name n-typing"></span></h3>
-                            <h3 class="myprofession"><span class="p-typing">Mobile app developer</span> </h3>
+                            <h3 class="myprofession"><span class="p-typing"></span> </h3>
                             <!-- <p>major description major description
                                 major description major
                                 description major description major description major description</p> -->
@@ -104,6 +108,7 @@
                                     </div>
                                 </div>
                                 <div class="skills padd-15">
+                                    <h3 class="title">Skills</h3>
                                     <div class="row">
                                         <div class="skill-item padd-15">
                                             <h5>DART</h5>
