--- a/index.html
+++ b/index.html
@@ -39,16 +39,16 @@
             <section id="home" class="home section">
                 <div class="container">
                     <div class="row">
-                    <div class="btn-lang">
-                        <a onclick="changeLang(lang)" class="btn">ENGLISH</a>
-                        <a id="ar" onclick="changeLang(lang)" class="btn">عربي</a>
-                    </div>
+                        <div class="btn-lang">
+                            <a onclick="changeLang(lang)" class="btn">ENGLISH</a>
+                            <a id="ar" onclick="changeLang(lang)" class="btn">عربي</a>
+                        </div>
                         <div class="home-img padd-15">
-                            <img src="image/myphoto.jpg" alt="">
+                            <img src="image/myphoto6.jpg" alt="">
                         </div>
                         <div class="home-info padd-15">
-                            <h3 class="hello">Hello <span class="name n-typing"></span></h3>
-                            <h3 class="myprofession"><span class="p-typing"></span> </h3>
+                            <h3 class="hello">&lt;<span class="name n-typing"></span>/></h3>
+                            <h3 class="myprofession">&lt;<span class="p-typing"></span> /></h3>
                             <!-- <p>major description major description
                                 major description major
                                 description major description major description major description</p> -->
@@ -71,9 +71,7 @@
                         <div class="about-content padd-15">
                             <div class="row">
                                 <div class="about-text padd-15">
-                                    <h3>I am <span>Abdulrahman Alatawi</span>, and I'm working as a <span>Mobile App
-                                            Developer</span>, and I am studying a <span>Master's degree</span> in
-                                        <span>Computer Science</span> at <span>Cairo University</span>
+                                    <h3>I'm <span>Abdulrahman Alatawi</span>, and <span>Mobile App Developer</span>
                                     </h3>
                                     <!-- <p>major description major description
                                         major description major
@@ -90,7 +88,7 @@
                                             <p>Degree : <span>Computer Science</span></p>
                                         </div>
                                         <div class="info-item padd-15">
-                                            <p>City : <span>Cairo</span></p>
+                                            <p>City : <span>Hail</span></p>
                                         </div>
                                         <div class="info-item padd-15">
                                             <p>Email : <span>dhoom.sedge@gmail.com</span></p>
@@ -111,32 +109,23 @@
                                     <h3 class="title">Skills</h3>
                                     <div class="row">
                                         <div class="skill-item padd-15">
-                                            <h5>DART</h5>
-                                            <div class="progress">
+                                            <h5>FLUTTER</h5>
+                                            <!-- <div class="progress">
                                                 <div class="progress-in" style="width: 95%;"></div>
                                                 <div class="skill-percentage">95%</div>
-                                            </div>
+                                            </div> -->
+                                        </div>
+                                        <div class="skill-item padd-15">
+                                            <h5>DART</h5>
                                         </div>
                                         <div class="skill-item padd-15">
                                             <h5>PHP</h5>
-                                            <div class="progress">
-                                                <div class="progress-in" style="width: 90%;"></div>
-                                                <div class="skill-percentage">90%</div>
-                                            </div>
                                         </div>
                                         <div class="skill-item padd-15">
                                             <h5>SQL</h5>
-                                            <div class="progress">
-                                                <div class="progress-in" style="width: 85%;"></div>
-                                                <div class="skill-percentage">85%</div>
-                                            </div>
                                         </div>
                                         <div class="skill-item padd-15">
                                             <h5>FIREBASE</h5>
-                                            <div class="progress">
-                                                <div class="progress-in" style="width: 80%;"></div>
-                                                <div class="skill-percentage">80%</div>
-                                            </div>
                                         </div>
                                     </div>
                                 </div>
@@ -148,7 +137,7 @@
                                         <div class="timeline-box padd-15">
                                             <div class="timeline shadow-dark">
                                                 <!-- timeline item -->
-                                                <div class="timeline-item">
+                                                <!-- <div class="timeline-item">
                                                     <div class="circle-dot"></div>
                                                     <h3 class="timeline-date">
                                                         <i class="fa fa-calendar"></i> 2023 - NOW
@@ -156,7 +145,7 @@
                                                     <h4 class="timeline-title">Master in Computer Science</h4>
                                                     <p class="timeline-text">Cairo University</p>
                                                     <p class="timeline-text">Egypt</p>
-                                                </div>
+                                                </div> -->
                                                 <div class="timeline-item">
                                                     <div class="circle-dot"></div>
                                                     <h3 class="timeline-date">
