--- a/index.html
+++ b/index.html
@@ -14,7 +14,12 @@
     <a href="#home" class="logo nav-link">
       <i class='bx bx-code-alt'></i> atowi7
     </a>
-    <div class="bx bx-menu" id="menu-icon"></div>
+    <div class="header-icons">
+      <button id="lang-switcher" class="lang-btn">
+        <i class='bx bx-world'></i> AR
+      </button>
+      <div class="bx bx-menu" id="menu-icon"></div>
+    </div>
     <nav class="navbar">
       <a href="#home" class="nav-link active" data-key="nav_home">Home</a>
       <a href="#education" class="nav-link" data-key="nav_education">Education</a>
@@ -23,10 +28,8 @@
       <a href="#skills" class="nav-link" data-key="nav_skills">Skills</a>
       <a href="#certifications" class="nav-link" data-key="nav_certifications">Certifications</a>
     </nav>
-    <button id="lang-switcher" class="lang-btn">
-      <i class='bx bx-world'></i> AR
-    </button>
   </header>
+
 
   <main>
     <section class="home" id="home">
